@@ -1,3 +1,6 @@
+20/08/09 Julien Dutheil
+* Added config files for CMake.
+
 19/08/09 Sylvain Gaillard
 * Introduced 3 new interfaces IOSequenceStream, ISequenceStream and
   OSequenceStream. These interfaces are intended to be used by IOFormat
